--- a/index.html
+++ b/index.html
@@ -7,8 +7,27 @@
     <title>html-london-trip</title>
 </head>
 <body>
-    
 
+    <!-- header -->
+    <header>
+        <div>
+            <h1>Il mio Viaggio a Londra</h1>
+            <img src="img/london-eye.jpg" alt="london eye">
+            <img src="img/river-thames.jpg" alt="river thames">
+            <img src="img/big-bang-clocktower.jpg" alt="big bang clock tower">
+            <hr>
+        </div>
+    </header>
+
+    
+    <main>
+        <div>
+
+        </div>
+    </main>
+
+    <footer>      
+    </footer>
 
 
 </body>
