--- a/index.html
+++ b/index.html
@@ -119,10 +119,13 @@
     <!-- footer -->
     <footer>      
         <div>
-            
+            <h3>Le foto</h3>
+
+            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="millennium bridge">
+            <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="tower bridge">
+
+            <hr>
         </div>
     </footer>
-
-
 </body>
 </html>
